# Contracts/IOrderRepository.cs
@@ -1,0 +1,14 @@
+﻿using System.Collections.Generic;
+using System.Threading.Tasks;
+using CustomerManagementPortal.Entities.Models;
+using CustomerManagementPortal.Entities.Returns;
+
+namespace CustomerManagementPortal.Contracts
+{
+    public interface IOrderRepository :IRepositoryBase<Order>
+    {
+        public Task<List<OrderInfo>> GetAllListItems();
+
+
+    }
+}
