# Contracts/IOrderStatusRepository.cs
@@ -1,0 +1,8 @@
+﻿using CustomerManagementPortal.Entities.Enums;
+
+namespace CustomerManagementPortal.Contracts
+{
+    public interface IOrderStatusRepository : IRepositoryBase<OrderStatus>
+    {
+    }
+}
