# Entities/RequestFeatures/OrderStatusChangeParameters.cs
@@ -1,0 +1,10 @@
+﻿using System;
+
+namespace CustomerManagementPortal.Entities.RequestFeatures
+{
+    public class OrderStatusChangeParameters
+    {
+        public Guid OrderId { get; set; }
+        public Guid NewOrderStatusId { get; set; }
+    }
+}
